# pre-commit-pin-dependencies

./: .pre-commit-hooks.yaml  README.md  entry.py  pyproject.toml
.github/workflows/: test.yml
pin_poetry_dependencies/: __init__.py
tests/: iter_dependencies_test.py  pin_dependency_test.py
tests/resources/: caret.toml  less_than_equal.toml  more_than_equal.toml  multiple_unpinned.toml  pinned_deps.toml  tilde.toml  unpinned_python.toml
