[tool.poetry]
name = "pre-commit-pin-dependencies"
version = "0.1.0"
description = "A pre-commit hook to enforce pinning poetry dependencies"
authors = ["Harry Lees <harry.lees@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pin_poetry_dependencies"}]

[tool.poetry.dependencies]
python = ">=3.7"
toml = "0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
